// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json body > array input > requires at least one source 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "details": {
    "nested": {
      "0": [
        "At least one source is required.",
      ],
    },
  },
  "error": "Bad Request",
  "message": "Validation error",
  "statusCode": 400,
}
`;

exports[`json body > object input > errors correctly on an empty object 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "details": {
    "root": [
      "At least one source is required.",
    ],
  },
  "error": "Bad Request",
  "message": "Validation error",
  "statusCode": 400,
}
`;

exports[`json body > object input > gET fails with json body 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "details": {
    "id": [
      "Invalid key: Expected "id" but received undefined",
    ],
    "source": [
      "Invalid key: Expected "source" but received undefined",
    ],
  },
  "error": "Bad Request",
  "message": "Validation error",
  "statusCode": 400,
}
`;
